# catanatron

./: .env.example  Dockerfile.uv  VARIABLE_PLAYERS_GUIDE.md  WEBSOCKET_GAME_GUIDE.md  docker-compose.yml  environment.yml  pyproject.toml  run_catanatron.sh  start_game.sh  start_llm_clients.sh  start_server.py  stop_llm_clients.sh  test_flask_websocket_sync.sh  test_websocket_status.sh
catanatron/: package-lock.json
catanatron/catanatron/: json.py  state.py  state_functions.py
catanatron/catanatron/cli/: accumulators.py  cli_players.py
catanatron/catanatron/models/: actions.py  board.py  enums.py
catanatron/catanatron/multiplayer/: __init__.py  game_engine_server.py  llm_agent_client.py
catanatron/catanatron/players/: llm.py  output.json
catanatron/catanatron/web/: api.py  models.py  utils.py
scripts/: start_blue_agent.py  start_orange_agent.py  start_red_agent.py  start_white_agent.py
ui/: .env.example  index.html  vite.config.ts
ui/src/: App.jsx  configuration.ts  index.css  variables.scss
ui/src/components/: LeftDrawer.jsx  LeftDrawer.scss  PlayerAvatar.jsx  PlayerAvatar.scss  PlayerStateBox.jsx  PlayerStateBox.scss  Prompt.jsx  Prompt.scss  ProtectedRoute.jsx  README_PlayerAvatar.md  RightDrawer.jsx  RightDrawer.scss  old_RightDrawer.scss
ui/src/pages/: ActionsToolbar.jsx  ActionsToolbar.scss  Board.scss  GameScreen.jsx  GameScreen.scss  HomePage.jsx  HomePage.scss  Lobby.jsx  Lobby.scss  LoginPage.jsx  LoginPage.scss  Tile.tsx
ui/src/utils/: apiClient.ts  authAPI.js
