[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catanatron"
version = "3.3.0"
authors = [{ name = "Bryan Collazo", email = "bcollazo2010@gmail.com" }]
description = "Fast Settlers of Catan Python Implementation"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
keywords = ["catan", "settlers of catan", "board game", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "networkx",
    "click",
    "rich",
    "dotenv",
    "google-generativeai>=0.8.5",
    "google-genai>=1.19.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "sqlalchemy>=2.0.41",
    "flask-sqlalchemy>=3.1.1",
    "websockets>=15.0.1",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
gym = ["gymnasium<=0.29.1", "numpy", "pandas", "fastparquet"]
web = [
    "gunicorn",
    "flask",
    "flask_cors",
    "flask_sqlalchemy",
    "sqlalchemy",
    "psycopg2-binary",
    "google-genai",
]
dev = [
    "black",
    "pytest",
    "pytest-benchmark",
    "pytest-watch",
    "coverage",
    "coveralls",
]

[project.urls]
Homepage = "https://github.com/bcollazo/catanatron"
Repository = "https://github.com/bcollazo/catanatron"

[project.scripts]
catanatron-play = "catanatron.cli.play:simulate"

[tool.setuptools.packages.find]
where = ["catanatron"]
